tests/good/vars/declare_inline.go
package main

import "fmt"

func main() {
	x := 2

	fmt.Print(x, "\n")
}

/*
== Expected program output ==
2
*/
