tests/bad/assign/underscore.go
package main

func main() {
	x := _
}

/*
== Expected compiler output ==
File "./tests/bad/assign/underscore.go", line 4, characters 6-7:
error: cannot use _ as value
*/
